--- a/bswebbgame.html
+++ b/bswebbgame.html
@@ -6,12 +6,12 @@
   <title>Document</title>
 </head>
 <body>
+  <div style="width:960px; height:540px; overflow:hidden;">
   <iframe 
-  src="https://682271a84d40d0196654b8fe--idyllic-tapioca-2545fd.netlify.app/" 
-  width="100%" 
-  height="600" 
-  style="border: none;"
-  allowfullscreen>
-</iframe>
+    src="https://682271a84d40d0196654b8fe--idyllic-tapioca-2545fd.netlify.app/" 
+    style="width:1920px; height:1080px; border:none; transform: scale(0.5); transform-origin: top left;">
+  </iframe>
+</div>
+
 </body>
 </html>
