--- a/bswebbgame.html
+++ b/bswebbgame.html
@@ -34,15 +34,13 @@
 
 <div class="game-embed-container-9x16">
   <iframe
-    src="https://bakestargames.vercel.app/bswebbgame.html" /* << CORRECTED URL */
-    title="Bake Star Game" /* << CHANGE to your game's actual name */
-    allowfullscreen /* Allows the game's fullscreen button to work */
+    src="https://bakestargames.vercel.app/bswebbgame.html" 
+    title="Bake Star Game" 
+    allowfullscreen 
   >
     <!-- Fallback content for browsers that don't support iframes -->
-    Your browser does not support iframes.
-    You can play the game directly
+
     <a href="https://bakestargames.vercel.app/bswebbgame.html" target="_blank">here</a>.
-     /* << CORRECTED FALLBACK URL */
   </iframe>
 </div>
 <!-- End of Game Embed Code -->
